<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logomaternalcare"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- App Name TextView -->
    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- CardView for input fields -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/appNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Inside CardView: EditTexts and Buttons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Email Icon and Email EditText -->
            <ImageView
                android:id="@+id/icEmail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/Email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserrat_regular"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/icEmail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" />

            <!-- New Password Icon and New Password EditText -->
            <ImageView
                android:id="@+id/icNewPassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock"
                android:contentDescription="@string/new_password"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                app:layout_constraintStart_toEndOf="@id/icNewPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" />

            <!-- Confirm Password Icon and Confirm Password EditText -->
            <ImageView
                android:id="@+id/icConfirmPassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock"
                android:contentDescription="@string/confirm_password"
                app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_regular"
                android:padding="12dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
                app:layout_constraintStart_toEndOf="@id/icConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:fontFamily="@font/montserrat_bold"
                android:backgroundTint="@color/pinkTua"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
